--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,9 @@
 @import "~bootstrap/scss/bootstrap";
-body {
+html,body {
     width: 100%;
     max-width: 100%;
     overflow-x: hidden;
+    height: 100%;
 }
 
 .Navbar {
@@ -94,9 +95,12 @@ body {
     border : 1px solid white;
     background-color: whitesmoke;
     padding: 10px;
+    overflow-x: hidden;
     img {
-        max-width: 250px;
+        max-width: 200px;
+        min-width: 200px;
         padding-left: 0px;
+        border: 0;
     }
 
     a {
@@ -108,6 +112,13 @@ body {
         background-color: #002f34;
         color: white;
     }
+}
+
+.adone {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 
