--- a/src/App.scss
+++ b/src/App.scss
@@ -147,12 +147,21 @@ html,body {
     border-radius: 15px;
 }
 
+.profile {
+    img {
+        width: 10%;
+        height: 20vh;
+        border-radius: 100%;
+    }
+}
+
 .loader {
+    position: absolute;
+    top: 40%;
+    left: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: auto 0;
-    
     .lds-ring {
         position: relative;
         width: 80px;
